2000-06-21  Christopher James Lahey  <clahey@helixcode.com>

	* message-list.c: Removed an erroneous comment.

2000-06-21  Dan Winship  <danw@helixcode.com>

	* mail-config.c (create_transport_page): Make this not crash if
	you don't have a transport configured.
	
	* message-list.c: Update received date to work like sent date.

2000-06-21  Peter Williams  <peterw@helixcode.com>

	* mail-thread.{c,h}: New files -- a simple API for executing
	the major mail ops (fetch_mail etc) asynchronously, allowing
	the operations to send messages and update a progress bar.

	* test-thread.{c,h}: Tests the mail-thread API.

	* Makefile.am: add mail-thread.[ch] to evolution_mail_SOURCES
	and declare the test_thread noinst_PROGRAM.

2000-06-21  Peter Williams  <peterw@helixcode.com>

	* mail-format.c (mail_generate_reply): Include "e-setup.h" to
	get the prototype for evolution_dir.

2000-06-20  Jeffrey Stedfast  <fejj@helixcode.com>

	* component-factory.c (create_imap_storage): Oops. Should
	have checked for a NULL sources.

2000-06-20  Dan Winship  <danw@helixcode.com>

	* message-list.c (mark_msg_seen): Quick hack to prevent a NULL
	pointer dereference. Things need to be cleaned up a bit more here
	though.

	* mail-sources.c: Oops. This should have been removed a long time
	ago.

2000-06-20  Jeffrey Stedfast  <fejj@helixcode.com>

	* folder-browser.c (folder_browser_load_folder): Working on getting 
	this to work :)

	* component-factory.c (create_imap_storage): Should now correctly
	construct the folder path allowing the selection of a folder.

2000-06-20  Ettore Perazzoli  <ettore@helixcode.com>

	* mail-format.c (mail_generate_reply): Declare `evolution_dir'.
	Ugly, ugly, ugly, but I am not sure where it should go instead.

2000-06-19  Ettore Perazzoli  <ettore@helixcode.com>

	* mail-ops.c (ask_confirm_for_empty_subject): New function to ask
	confirmation for an empty subject line.
	(composer_send_cb): Use it if the subject is empty and only send